--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
-main.class=lab1.Startup
+main.class=lab1.StartupLab1
 dist.jar=${dist.dir}/InterfaceAbstractLab.jar
 javac.test.processorpath=${javac.test.classpath}
 javadoc.use=true
